<resources>
    <string name="app_name" translatable="false">Soundboard</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_import_directory">Import directory</string>
    <string name="action_new">Import sound</string>
    <string name="action_remove_all">Remove all sounds</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="file_directory">Directory</string>
    <string name="file_storage_selection">Storage selection</string>
    <string name="confirm_remove"><![CDATA[Are you sure you want to remove <b>%s</b> ?]]></string>
    <string name="confirm_remove_all"><![CDATA[Are you sure you want to remove <b>all</b> sounds?]]></string>
    <string name="import_directory_info">%s sound files imported.</string>
    <string name="error_entry_exists">Entry already exists.</string>
    <string name="error_add">Could not import %s</string>
    <string name="error_no_storage">Sound storage is currently not available. Please ensure that your SD Card is accessible and try again.</string>
    <string name="error_permission_denied"><![CDATA[<b>%s</b> cannot run when access to the device storage is denied.]]></string>
    <string name="error_remove">An error occurred while removing sound.</string>
    <string name="about_description_text">Play short sound samples on your Android device.</string>
    <string name="about_usage_label">Usage</string>
    <string name="about_usage_text">Select a sound file from your storage directory and add it to the sounds list. It will be copied to the private application folder and can be played on touch.\n\nYou can delete the original file at any time. The sound sample will still be available in the application until you decide to delete it.</string>
    <string name="about_copyright_label">Copyright</string>
    <string name="about_copyright_text" translatable="false">© 2016 Sebastian Wolf</string>
    <string name="about_license_label">License</string>
    <string name="about_license_text" translatable="false"><a href="google.com">GNU General Public License version 3</a></string>
    <string name="about_source_label">Source code</string>
    <string name="about_source_text" translatable="false">https://github.com/meonwax/soundboard</string>
</resources>
